# server-axum

./: .env.example  Cargo.toml
src/: app.rs  config.rs  error.rs  main.rs  state.rs
src/models/: event.rs
src/routes/: health.rs  hello.rs  mod.rs
src/ws/: handler.rs  mod.rs  protocol.rs
static/: test.txt
static/dir/: test.txt
